se agrego un titulo a la pagina principal

--- a/src/WebsiteBundle/Resources/views/Default/index.html.twig
+++ b/src/WebsiteBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,2 @@
-{% trans %}Hello World{% endtrans %}
+<h1>{% trans %}Symfony2 es genial{% endtrans %}</h1>
+<p>{% trans %}Hello World{% endtrans %}</p>
